# USWebBridge-mine

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  USWebSConfig.h.in  USWebSConfig.h.in~
DNLFrameSource/: CMakeLists.txt  DNLFileFrameSource.cpp  DNLFrameSource.cpp  DNLFrameSource.h
DNLImageStreamSimulator/: CMakeLists.txt  CMakeLists.txt~  DNLFileImageSource.cpp  DNLFileImageSource.h  DNLFrameExchange.cpp  DNLFrameExchange.h  DNLImageExtractor.cpp  DNLImageExtractor.h  DNLImageSource.cpp  DNLImageSource.h  UltrasoundImagePipeline.cpp  UltrasoundImagePipeline.h  main_DNLImageSteamSimulator.cpp  main_DNLImageStreamSimulator.cpp
GstPipeline/: CMakeLists.txt  FrameExchange.cpp  FrameExchange.h  GstUltrasoundImagePipeline.cpp  GstUltrasoundImagePipeline.h  StreamAdaptor.cpp  StreamAdaptor.h
JanusPlugin/: CMakeLists.txt  JanusUltrasoundPlugin.cpp  JanusUltrasoundPlugin.h  JanusUltrasoundSession.cpp  JanusUltrasoundSession.h  JanusUltrasoundSessionManager.cpp  JanusUltrasoundSessionManager.h  RTPSource.cpp  RTPSource.h  UltrasoundPlugin.cpp  UltrasoundPlugin.h  janus_ultrasound.c  janus_ultrasound.cpp  janus_ultrasound.cpp.autosave  janus_ultrasound.h  plugin_hooks.cpp  plugin_hooks.h  ratecontroller.cpp  ratecontroller.h  rtp_functions.cpp  rtp_functions.h
JanusPlugin/auth/: Authenticator.h  DummyAuthenticator.cpp  DummyAuthenticator.h  SimpleAuthenticator.cpp  SimpleAuthenticator.h
JanusPlugin/ratecontrol/: RateController.cpp  RateController.h  StaticRateController.cpp  StaticRateController.h  TFRCController.cpp  TFRCController.h
Modules/: CMakeLists.txt  CMakeLists.txt~
Modules/Sensors/: CMakeLists.txt  CMakeLists.txt~  ForceConversions.cpp  ForceConversions.h  TimeManager.cpp  TimeManager.h
Modules/USStreamingCommon/: CMakeLists.txt  CMakeLists.txt~  DNLImage.cxx  DNLImage.h  DNLImageReader.cxx  DNLImageReader.h  DNLImageWriter.cxx  DNLImageWriter.h  DNLUSAcquisitionParameters.cxx  DNLUSAcquisitionParameters.h  GUIState.cxx  GUIState.h  Logger.cpp  Logger.h  common.h
USPipeline/: CMakeLists.txt  DNL2DImageExtractor.cpp  DNL2DImageExtractor.h  DNLFileFrameSource.cpp  DNLFileFrameSource.h  DNLFileImageSource.cpp  DNLFileImageSource.h  DNLFrameExchange.cpp  DNLFrameExchange.h  DNLFrameSource.h  DNLImageExtractor.cpp  DNLImageExtractor.h  DNLImageSource.cpp  DNLImageSource.h  FrameExchange.cpp  FrameExchange.h  GstUltrasoundImagePipeline.cpp  GstUltrasoundImagePipeline.h  UltrasoundImagePipeline.cpp  UltrasoundImagePipeline.h
USPipelineDemo/: CMakeLists.txt  DummyController.cpp  DummyController.h  main.cpp
USPipelineInterface/: CMakeLists.txt  Frame.cpp  Frame.h  FrameSource.cpp  FrameSource.h  ImageMetadata.h  PatientMetadata.cpp  PatientMetadata.h  UltrasoundController.h  UltrasoundImagePipeline.h  UltrasoundMetadata.cpp  UltrasoundMetadata.h  UltrasoundPlugin.h  interface.cpp  interface.h
WebFrontend/: README.md  config.json  index.html  probe.dae  server.py
WebFrontend/css/: bootstrap.min.css  rangeslider.css  style.scss
WebFrontend/js/: caliper.js  controller.js  login-modal.js  probe.js  range.js  select.js  snapshot.js  toggle.js  video-controller.js  webrtc-controller.js
cmake/.svn/: all-wcprops  entries
cmake/Modules/: FindCGAL.cmake  FindCGAL.cmake~  FindDNLSimulatorCommon.cmake  FindGlibmm.cmake  FindLibXML++.cmake  FindPoco.cmake
cmake/Modules/.svn/: entries
